--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,6 +1,6 @@
 {
   "name": "clj-collection-apis-reasonml",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "sources": [
     {
       "dir": "src"
@@ -19,6 +19,7 @@
   "bs-dev-dependencies": [
     "bs-jest"
   ],
-  "namespace": true,
+  "bsc-flags": ["-bs-super-errors", "-bs-no-version-header"],
+  "namespace": false,
   "refmt": 3
 }
